# AutoPanorama

./: .gitignore  README.md  add_annotation.php  add_annotation_server.php  api_curl_test.php  app_config.php  build.sh  clear_annotation_temp.sh  clear_match_datas.sh  clear_output_img.sh  curl_short_cut.sh  exec_conda_python.py  exec_conda_test.php  flask_api_interface.php  index.php  json_manager.php  mv_to_application_dir.sh  package-lock.json  panorama_play.php  panorama_play_server.php  panorama_preview.html  panorama_preview.php  post_manager.php  result.txt  result_ss_mindist_100.txt  result_ss_mindist_200.txt  result_ss_mindist_50.txt  run_detect_objects_via_vision_api.sh  savvy-webbing-368209-93035ab18f3a.json  search_object_in_cubemap.py  selective_search_sample.py  server_common.php  session_manager.php  test.php  test_run.sh  update_detect_progress.php  view_common.php
css/: add_annotation.css  common.css  panorama_play.css  panorama_preview.css
image_process_dev/: CMakeLists.txt  common.cpp  common.hpp  config.hpp  convert_pano_to_cube.cpp  convert_pano_to_cube.hpp  convert_position.cpp  convert_position.hpp  debug_util.cpp  debug_util.hpp  detect_object_position.cpp  detect_object_position.hpp  export_data.cpp  export_data.hpp  main.cpp  path_convert.cpp  path_convert.hpp  preprocess.cpp  preprocess.hpp  selective_search.hpp
js/: add_annotation.js  panorama_play.js  panorama_world.js
object_detector/: annotation_data_uploader.py  annotation_object_detector.py  api_status.py  cube_pano_pos_converter.py  detect_annotation_object.py  main.py  nlp.py  (+2 more)
(+4 files in other folders)
